# tct-scrooper

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  HANDOFF.md  PLAN.md  deploy.sh  docker-compose.yml  go.mod  go.sum  main.go  nuke_site.sh  pyproject.toml  realtor-listing.html  run_tui.py  schema.sql  schema_v2.sql  setup-droplet.sh  setup-expressvpn.sh  tct_scrooper.service  tui-go.sh  tui.sh
config/: config.go
config/sites/: realtor_ca.yaml
httputil/: clients.go
identity/: fingerprint.go
logging/: logging.go
migrations/: 001_media_category.sql  002_media_bridges.sql
models/: command.go  domain.go  log.go  property.go  run.go  snapshot.go
scheduler/: scheduler.go
scraper/: api_handler.go  apify_adapter.go  apify_canadesk.go  apify_handler.go  apify_helpers.go  apify_scrapemind.go  browser_handler.go  browser_handler_test.go  handler.go  orchestrator.go
scraper/testdata/: realtor_ca_basic.json  realtor_ca_variation.json
scripts/: setup-droplet.sh
services/: healthcheck.go  listing.go  match.go  media.go
storage/: postgres.go  s3.go  sqlite.go  supabase.go
tui/: __init__.py  app.py  go.mod  go.sum  main.go  setup.sh
tui-go/: go.mod  go.sum  main.go
tui-go/db/: client.go
tui-go/styles/: theme.go
tui-go/views/: dashboard.go  data.go  logs.go
tui/clients/: __init__.py  db_client.py
tui/db/: client.go
tui/styles/: theme.go
tui/views/: __init__.py  dashboard.go  dashboard.py  data.go  data.py  logs.go  logs.py
vpn/: expressvpn.go
workers/: enrichment.go  healthcheck.go  logger.go  media.go
