[project]
name = "tct-scrooper-tui"
version = "0.1.0"
description = "TUI Admin Interface for TCT Scrooper"
requires-python = ">=3.10"
dependencies = [
	"textual>=0.50.0",
]

[project.scripts]
scrooper-tui = "tui.app:main"

[project.optional-dependencies]
web = ["textual-serve"]
dev = ["textual-dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
